Make vine grapples safe on narrow platforms